--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
 <p>Trained Chef, film editor and writer.</p>
  
+<section>
+  <p>My uncle once published an articel about me in the New York Times off handedly refering to me as
+    an anarchist, nihillist, bohemian.
+  </p>
+</section>
 
  <h3>
   <l1>
