--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      
 
 <header>
-  <h1>Student Bio</h1>
+  <h1>Artist Porfolio</h1>
 
   <h2>Taylor S. Smith</h2>
   <h3>Trained Chef, film editor and writer</h3>
@@ -22,7 +22,7 @@
  
 <section>
   <p>My uncle once published an articel about me in the New York Times off handedly refering to me as
-    an anarchist, nihillist, bohemian.
+    an anarchist, nihillist, bohemian. When I was 15.
   </p>
 </section>
 
