--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
   <h1>Artist Porfolio</h1>
 
   <h2>Taylor S. Smith</h2>
-  <h3>Trained Chef, film editor and writer</h3>
+  <h3>Writer, Photographer, Minimalist</h3>
 </header>
 </head>
 
 <body>
+  
 <img src="https://images3.alphacoders.com/785/785576.png" width="201" height="113">
 
-<p>Trained Chef, film editor and writer.</p>
+<p>Born and raised in LA, Taylor ran away to San Francsico when he was 17 and joined the local Art Scene, 
+  taking shots and walking the streets.</p>
  
 <section>
-  <p>My uncle once published an articel about me in the New York Times off handedly refering to me as
+  <p>My uncle once published an article about me in the New York Times off handedly refering to me as
     an anarchist, nihillist, bohemian. When I was 15.
   </p>
 </section>
 
+<nav>
  <h3>
   <l1>
   <a href="Taylorsdsmith@gmail.com" target="_blank">Gmail</a>
@@ -40,6 +43,7 @@
   </l3>
  </h3>
   <hr>
+  </nav>
 
   
 
