added so much shit

--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
   <p>My uncle once published an article about me in the New York Times off handedly refering to me as
     an anarchist, nihillist, bohemian. When I was 15.
   </p>
+  <aside>
+      <header>Three often mistunderstood concepts,</header>
+      <p>As I've grown older they sort of blended into my subconcious, forming a seperate kind of demon.</p>
+    </aside>
 </section>
 
+
+<article>
+    <h1>Park City, UT</h1>
+    <p>Taylor served time in the kitchen and bars of Main Street during high season picking up various service industy tricks from across the globe</p>
+  </article>
 <nav>
  <h3>
   <l1>
