--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <article>
     <h1>Park City, UT</h1>
-    <p>Taylor served time in the kitchen and bars of Main Street during high season picking up various service industy tricks from across the globe</p>
+    <p>Suffering a nervous breakdown in San Francsico in his mid-twenties, Taylor served time in the kitchens 
+      and bars of Main Street during high season picking up various service industy tricks from across the globe</p>
   </article>
 <nav>
  <h3>
@@ -56,7 +57,10 @@
 
   
 
-  
+  <footer>
+      <p>Posted by: Robert Ficklestein</p>
+      <p>Contact information: <a href="taylorsdsmith@gmail.com">Gmail</a>.</p>
+    </footer>
 </body>
             
 </html>
