--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
 <section>
   <p>My uncle once published an article about me in the New York Times off handedly refering to me as
-    an anarchist, nihillist, bohemian. When I was 15.
+    an anarchist, nihillist, bohemian.          When I was 15.
   </p>
   <aside>
       <header>Three often mistunderstood concepts,</header>
@@ -36,16 +36,14 @@
 <article>
     <h1>Park City, UT</h1>
     <p>Suffering a nervous breakdown in San Francsico in his mid-twenties, Taylor served time in the kitchens 
-      and bars of Main Street during high season picking up various service industy tricks from across the globe</p>
+      and bars of Main Street during high season picking up various service industy tricks from across the globe.</p>
   </article>
 <nav>
  <h3>
   <l1>
-  <a href="Taylorsdsmith@gmail.com" target="_blank">Gmail</a>
-  <br>
     </l1>
     <l2>
-  <a href="www.github.com">Github Depository</a></strong>
+  <a href="https://github.com/Kantandia/-HW-wireframe-">Github Depository</a></strong>
   <br>
         </l2>
   <l3>
